--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "./node_modules/.bin/tsc",
-    "start": "node dist/server.js",
+  "build": "npx tsc",
+  "start": "node dist/server.js"
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
