--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
   "build": "npx tsc",
   "start": "node dist/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "postinstall": "chmod +x ./node_modules/.bin/tsc",
+  "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
