--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
     "compilerOptions": {
-      "target": "ES6",
-      "module": "commonjs",
-      "outDir": "./dist",
-      "rootDir": "./src",
+    "outDir": "./dist",
+    "module": "commonjs",
+    "target": "es6",
+    "esModuleInterop": true
+       "rootDir": "./src",
       "strict": true,
-      "esModuleInterop": true
     },
     "include": ["src/**/*"],
     "exclude": ["node_modules"]
