--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "builds": [
         {
-            "src": "package.json",
+            "src": "src/server.ts",
             "use": "@vercel/node"
         }
     ],
